src/test/deca/context/valid/created/objet/cast_classe3.deca
// Description :
// test de verification de cast sur une classe
//
// Resultats :
// ok

class A {

}

class B extends A {
   
}

{
    A a = new B();
    B b = new B() ;
    b = (B) (a);
}