src/test/deca/context/invalid/created/objet/extends2.deca
// Description:
//    extends sur une classe inexistante
//Resultat :
//    Ligne 10 : classe inexistante

class C {
   

}
class B extends A {
    int y ;
}